--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "ethers": "^6.13.5",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "pinata": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
