--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "ethers": "^6.13.5",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "next-themes": "^0.4.6",
     "pinata": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
