--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.16",
+    "@heroui/dropdown": "^2.3.16",
+    "@heroui/navbar": "^2.2.14",
+    "@heroui/spinner": "^2.2.13",
+    "@heroui/system": "^2.4.12",
+    "@heroui/theme": "^2.4.12",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -24,6 +30,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "ethers": "^6.13.5",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-themes": "^0.4.6",
