--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@heroui/dropdown": "^2.3.16",
     "@heroui/image": "^2.2.10",
     "@heroui/navbar": "^2.2.14",
+    "@heroui/skeleton": "^2.2.10",
     "@heroui/spinner": "^2.2.13",
     "@heroui/system": "^2.4.12",
     "@heroui/theme": "^2.4.12",
