--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@heroui/card": "^2.2.15",
     "@heroui/dropdown": "^2.3.16",
     "@heroui/image": "^2.2.10",
+    "@heroui/modal": "^2.2.13",
     "@heroui/navbar": "^2.2.14",
     "@heroui/skeleton": "^2.2.10",
     "@heroui/spinner": "^2.2.13",
@@ -38,8 +39,8 @@
     "next": "15.1.3",
     "next-themes": "^0.4.6",
     "pinata": "^2.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-qr-code": "^2.0.15",
     "sonner": "^2.0.1",
