--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,16 @@
     "@heroui/button": "^2.2.16",
     "@heroui/card": "^2.2.15",
     "@heroui/dropdown": "^2.3.16",
+    "@heroui/form": "^2.1.15",
     "@heroui/image": "^2.2.10",
+    "@heroui/input": "^2.4.16",
     "@heroui/modal": "^2.2.13",
     "@heroui/navbar": "^2.2.14",
     "@heroui/skeleton": "^2.2.10",
     "@heroui/spinner": "^2.2.13",
     "@heroui/system": "^2.4.12",
     "@heroui/theme": "^2.4.12",
+    "@heroui/toast": "^2.0.6",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
