style: made homepage more responsive for mobile devices

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@heroui/skeleton": "^2.2.10",
     "@heroui/spinner": "^2.2.13",
     "@heroui/system": "^2.4.12",
+    "@heroui/table": "^2.2.15",
     "@heroui/theme": "^2.4.12",
     "@heroui/toast": "^2.0.6",
     "@hookform/resolvers": "^4.1.3",
