--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/alert": "^2.2.16",
     "@heroui/button": "^2.2.16",
     "@heroui/card": "^2.2.15",
     "@heroui/dropdown": "^2.3.16",
@@ -21,6 +22,7 @@
     "@heroui/spinner": "^2.2.13",
     "@heroui/system": "^2.4.12",
     "@heroui/table": "^2.2.15",
+    "@heroui/tabs": "^2.2.13",
     "@heroui/theme": "^2.4.12",
     "@heroui/toast": "^2.0.6",
     "@hookform/resolvers": "^4.1.3",
@@ -38,7 +40,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "ethers": "^6.13.5",
-    "framer-motion": "^12.6.2",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-themes": "^0.4.6",
